# resume-lambda

./: .dockerignore  .env.example  .gitignore  .tool-versions  Dockerfile  README.md  Tiltfile  justfile  pyproject.toml
.github/workflows/: deploy.yml
interface/: Dockerfile  index.html  nginx.conf  openapi.yaml  start.sh
manifests/: Chart.yaml  values.yaml
manifests/templates/: interface.yaml  lambda.yaml
src/: main.py
terraform/: .gitignore  backend.tf  main.tf  setup-backend.sh  variables.tf
